# wasinn-demo

./: Cargo.toml  README.md
wasinn-app/: Cargo.toml  README.md  wasinn-mobilenet-app.wasm
wasinn-app/src/: main.rs
wasinn-mobilenet-app/: Cargo.toml  README.md  wasinn-mobilenet-app.wasm
wasinn-mobilenet-app/src/: main.rs
