[package]
name = "wasinn-app"
version = "0.1.0"
edition = "2021"
authors = ["Second-State"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
wasmedge-sdk = { version = "0.5", path = "/root/workspace/WasmEdge/bindings/rust/wasmedge-sdk", features = ["wasi_nn"]}
